client/src/App.css
/* src/App.css */

/* @tailwind base;
@tailwind components;
@tailwind utilities; */

.flex-column {
  background-color: rgb(198, 198, 198);
}

.main-content {
  margin: auto;
  max-width: 800px;
}

.intro {
  text-align: center;
  margin-top: 2rem;
}

.intro-title {
  font-size: 2.5rem;
  font-weight: bold;
  margin-bottom: 1rem;
}

.intro-text {
  font-size: 1.25rem;
  line-height: 1.5;
  color: #333;
  margin-bottom: 1.5rem;
}

.intro-link {
  display: inline-block;
  padding: 0.75rem 1.5rem;
  font-size: 1.25rem;
  font-weight: bold;
  text-transform: uppercase;
  background-color: #4caf50;
  color: white;
  border-radius: 4px;
  transition: background-color 0.3s ease;
}

.intro-link:hover {
  background-color: #388e3c;
}

.profile-image {
  width: 100px;
  height: 100px;
  position: absolute;
  top: 10px;
  left: 10px;
  z-index: 999;
}

.header-name {
  font-size: 1rem;
  font-family: "Brush Script MT";
  justify-content: center;
  align-items: center;
  color: rgb(0, 0, 0);
  background: linear-gradient(to bottom, #f0f0f0, #939393);
  opacity: 0.7;
  z-index: -1;
  text-align: center;
  border-bottom: 2px solid #888787;
  margin-top: 0%;
}

.header-name1 {
  font-size: 2.5rem;
  font-family: "Poppins", sans-serif;
  justify-content: center;
  align-items: center;
  color: rgb(255, 255, 255);
  opacity: 0.7;
  z-index: -1;
  text-align: left;
  margin-left: 115px;
  text-shadow: 1px 1px 1px #888787;
  font-weight: 300;
  letter-spacing: -0.02em;
  line-height: 1.1;
}

.hdcontainer {
  align-items: center;
  justify-content: center;
}

.header-name:hover {
  font-size: 5rem;
}

.navbar-nav {
  display: flex; /* Apply flexbox layout */
  flex-direction: row; /* Arrange items in a row */
  gap: 40px;
  font-style: oblique;
}

.header-tag {
  font-size: 10px;
  font-weight: 700;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  align-items: center;
  text-align: right;
  position: relative;
  margin-right: 3px;
  color: rgb(211, 209, 209);
  text-shadow: #e0e0e0;
  margin-bottom: 0px;
}
.intro-text {
  font-size: 15px;
  background-color: rgba(253, 253, 253, 0.95);
  border-radius: 10px;
}
h6 {
  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
}

h4 {
  justify-content: center;
  align-items: center;
}

.links {
  display: flex;
  flex-direction: row;
  gap: 60px;
  font-style: oblique;
  justify-content: center;
}

.resume-container {
  padding: 20px;
  background-color: #f4f4f4;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  max-width: 800px;
  margin: 0 auto;
  text-align: center;
  justify-content: center;
  align-items: center;
  display: flex;
}

.resume-container h1 {
  margin-bottom: 20px;
}

.resume-container .download-link {
  display: inline-block;
  padding: 10px 20px;
  margin-bottom: 20px;
  background-color: #007bff;
  color: #fff;
  text-decoration: none;
  border-radius: 4px;
}

.resume-container .download-link:hover {
  background-color: #0056b3;
}

.resume-container .proficiencies-list {
  list-style-type: none;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.resume-container .proficiencies-list li {
  margin: 10px 20px;
  padding: 5px 10px;
  background-color: #e0e0e0;
  border-radius: 4px;
}

.resume-image {
  width: 100%;
  max-width: 100%;
  margin-left: 100px;
}

.alert {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
}

.nav-link.active {
  font-weight: bold;
  color: #3c14b2;
}

.projects {
  width: 50px;
  height: auto;
  display: flex;
  justify-content: space-between;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 20px;
  align-items: center;
}

.projects img {
  width: 300px;
  height: 200px;
  justify-content: space-between;
  margin: 10px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 20px;
  align-items: center;
}

.project-details .button {
  display: inline-block;
  padding: 8px 16px;
  margin-top: 8px;
  background-color: #007bff;
  color: white;
  text-align: center;
  text-decoration: none;
  border-radius: 4px;
  transition: background-color 0.3s;
}

.project-details .button:hover {
  background-color: #0056b3;
}

.navbar {
  background: linear-gradient(to bottom, #f0f0f0, #939393);
  border-bottom: 2px solid #888787;
}

.lf h4 {
  color: white;
  font-size: 0.8rem;
  text-align: center;
}

.btn {
  background: linear-gradient(to bottom, #f0f0f0, #939393);
}

.logo-image {
  height: 55px;
  width: 80px;
  position: absolute;
  top: 13px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 999;
  background-color: transparent;
}

.intro-title {
  text-shadow: #f4f4f4;
}

h3 {
  font-size: 1rem;
  font-family: "Copperplate";
  justify-content: center;
  align-items: center;
  color: rgb(0, 0, 0);
  background: linear-gradient(to bottom, #f0f0f0, #939393);
  opacity: 0.7;
  z-index: -1;
  text-align: center;
  border-bottom: 2px solid #888787;
  margin-top: 0%;
}

.proj-head {
  font-size: 1rem;
  font-family: "Impact";
  justify-content: center;
  align-items: center;
  color: rgb(95, 94, 94);
  opacity: 0.7;
  z-index: -1;
  text-align: left;
  margin-top: 1%;
}

.project-page-container {
  display: flex;
  justify-content: space-between;
  padding: 20px; /* Optional: add padding around the container */
}

.project-list {
  flex: 3;
  margin-right: 20px; /* Space between the main and right columns */
}

.project-card h3 {
  color: #f0eeee;
  font-size: 1.5rem;
}

.repo-column {
  flex: 1;
  border-left: 1px solid #ccc; /* Grey dividing line */
  padding-left: 20px;
  position: absolute;
  width: 180px;
  top: 129px;
  right: 15px;
  z-index: 999;
}

.repo-column h3 {
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.repo-links {
  display: flex;
  flex-direction: column;
  gap: 10px; /* Space between the buttons */
}

.repo-link-button {
  background: linear-gradient(to bottom, #f0f0f0, #939393);
  border: 1px solid #ccc;
  padding: 10px;
  color: #f0eeee;
  text-align: left;
  cursor: pointer;
  font-size: 1rem;
  border-radius: 5px;
  transition: background 0.3s, transform 0.3s;
  font-family: "Copperplate";
}

.repo-link-button:hover {
  background: linear-gradient(to bottom, #e0e0e0, #828282);
  transform: scale(1.05);
}

.repo {
  font-size: 1rem;
  font-family: "Impact";
  justify-content: center;
  align-items: center;
  color: rgb(95, 94, 94);
  opacity: 0.7;
  z-index: -1;
  text-align: left;
  margin-top: 1%;
  margin-bottom: 1px;
}

.contact-header {
  font-size: 1rem;
  font-family: "Impact";
  justify-content: center;
  align-items: center;
  color: rgb(95, 94, 94);
  opacity: 0.7;
  z-index: -1;
  text-align: left;
  margin-top: 1%;
  margin-bottom: 10px;
}

.cont-name {
  position: relative;
  top: 0px;
  left: 15px;
  z-index: 999;
}

.cont-email {
  position: relative;
  top: 10px;
  left: 15px;
  z-index: 999;
}

.cont-mess {
  position: relative;
  top: 18px;
  left: 20px;
  z-index: 999;
}

.submit-button {
  position: relative; /* Position fixed to keep it centered on the screen */
  top: 0%; /* Move the element down by 50% of the viewport height */
  left: 50%; /* Move the element horizontally by 50% of the viewport width */
  transform: translate(
    -50%,
    -50%
  ); /* Center the element both vertically and horizontally */
  z-index: 999; /* Set a high z-index to ensure it's on top of other content */

  /* Additional styling for space above and below */
  margin-top: 50px; /* Add more space above */
  margin-bottom: 10px; /* Add more space below */
}

#name,
#email {
  width: 100%;
  padding: 8px;
  margin-bottom: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

/* Targeting textarea by ID */
#message {
  width: 100%;
  padding: 8px;
  margin-bottom: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

.click-here {
  font-size: 0.6rem;
  font-family: "Impact";
  color: rgb(95, 94, 94);
  opacity: 0.7;
  z-index: -1;
  position: absolute;
  top: 393px;
  left: 30px;
  z-index: 999;
}

.project-card img:hover {
  transform: scale(1.05);
  filter: brightness(1.8);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.emoji-link {
  position: absolute; /* Position it absolutely relative to the nearest positioned ancestor */
  top: 10px; /* Position from the top (adjust as needed) */
  left: 85%; /* Position 75% from the left of the screen */
  transform: translateX(
    -50%
  ); /* Center horizontally relative to its own width */
  font-size: 1.5rem; /* Adjust size of the emoji */
  text-decoration: none; /* Remove underline */
  transition: transform 0.2s; /* Adds a hover effect */
  color: inherit; /* Inherit text color */
  z-index: 1000; /* Inherits the color of the surrounding text */
}

/* Hover effect */
.emoji-link:hover {
  transform: scale(1.2); /* Enlarges the emoji on hover */
  color: #ff4500; /* Changes color on hover */
}

